colors and links updated

--- a/index.html
+++ b/index.html
@@ -53,9 +53,6 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#services">Contact</a>
-                    </li>
                     <!-- <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li> -->
@@ -64,6 +61,9 @@
                       <a class="page-scroll" href="#goodbye">Letter to Paitents </a>
                     </li>
 
+                    <li>
+                      <a class="page-scroll" href="#services">Contact</a>
+                    </li>
                     <!-- <li>
                         <a class="page-scroll" href="#about">History</a>
                     </li> -->
@@ -148,7 +148,7 @@
                         <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Medical Records Request</h4>
-                    <p class="text-muted"> For official records transfer inquiries, please complete download and complete the<a href="transfer-request.pdf"> form [link]</a> </p>
+                    <p class="text-muted"> For official records transfer inquiries, please download and complete the<a href="transfer-request.pdf"> form [link]</a> </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -161,12 +161,12 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-sticky-note-o fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-question fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Blog</h4>
+                    <h4 class="service-heading">Frequently asked questions</h4>
                     <p class="text-muted">
                       <!-- Click here to read some of Dr. Papadeas's old blog posts, including her strong opinions on the overuse of strollers. -->
-                      Blog posts coming soon!
+                      Please see reference the document for a <a href="letter.pdf"> list of frequently asked questions [link] </a>
                     </p>
                 </div>
             </div>
